app-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-example-svc
  # annotations:
  #   prometheus.io/scrape: "true"
  #   prometheus.io/port: "8000"
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: app-example
    app.kubernetes.io/name: app-example-release
